test/sema/pointer-equals-incompatible-pointee-types.delta
// RUN: %not %delta -typecheck %s | %FileCheck %s

void f(int* a, uint* b) {
	// CHECK: [[@LINE+1]]:8: error: invalid operands 'int*' and 'uint*' to '=='
	_ = a == b;
}
